--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mint.gozuko.xyz/",
+  "homepage": "https://phitheone.github.io/",
   "name": "candy-machine-ui",
   "version": "0.3.0",
   "private": true,
@@ -30,7 +30,7 @@
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
     "react-is": "^16.8.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
